WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268846
[WebGPU] SharedVideoFrameWriter::write may crash if frame is invalid
https://bugs.webkit.org/show_bug.cgi?id=268846
Summary
[WebGPU] SharedVideoFrameWriter::write may crash if frame is invalid
Mike Wyrzykowski
Reported
2024-02-06 11:32:52 PST
[WebGPU] SharedVideoFrameWriter::write may crash if frame is invalid
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-02-06 11:33:07 PST
radar://122399334
Mike Wyrzykowski
Comment 2
2024-02-06 11:35:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23944
EWS
Comment 3
2024-02-07 12:57:01 PST
Committed
274238@main
(87a427427873): <
https://commits.webkit.org/274238@main
> Reviewed commits have been landed. Closing PR #23944 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug