[WebGPU] SharedVideoFrameWriter::write may crash if frame is invalid https://bugs.webkit.org/show_bug.cgi?id=268846 <radar://122399334>

Reviewed by Tadeu Zagallo.

Two issues were present, first there was a release assert on a pointer
to a RefPtr and not its value and second it is not guaranteed that
mediaIdentifier has a value when there is no sharedVideoFrame.

* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteDevice.cpp:
(WebKit::RemoteDevice::importExternalTextureFromVideoFrame):
* Source/WebKit/WebProcess/GPU/graphics/WebGPU/RemoteDeviceProxy.cpp:
(WebKit::WebGPU::RemoteDeviceProxy::importExternalTexture):

Canonical link: https://commits.webkit.org/274238@main